--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,16 @@
-#####
-# OS X temporary files that should never be committed
-#
-# c.f. http://www.westwind.com/reference/os-x/invisibles.html
+## User settings
+xcuserdata/
 
+# Accidental Finder files
 .DS_Store
+.AppleDouble
+.LSOverride
 
-# c.f. http://www.westwind.com/reference/os-x/invisibles.html
+# Visual Studio Code
+.vscode
 
-.Trashes
-
-# c.f. http://www.westwind.com/reference/os-x/invisibles.html
-
-*.swp
-
-####
-# Xcode temporary files that should never be committed
-#
-# NB: NIB/XIB files still exist even on Storyboard projects, so we want this...
-
-*~.nib
-
-####
-# Xcode build files -
-#
-# NB: slash on the end, so we only remove the FOLDER, not any files that were badly named "DerivedData"
-
-DerivedData/
-
-# NB: slash on the end, so we only remove the FOLDER, not any files that were badly named "build"
-
+# Build folder
 build/
+
+# macOS custom folder icon
+Icon[^a-zA-Z]
